ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: project27-api

spec:
  ingressClassName: nginx

  rules:
    - host: project27.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project27-api
                port:
                  number: 8000
